; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_saa7191.c_saa7191_autodetect_norm.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_saa7191.c_saa7191_autodetect_norm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.v4l2_subdev = type { i32 }

@.str = private unnamed_addr constant [34 x i8] c"SAA7191 signal auto-detection...\0A\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"Reading status...\0A\00", align 1
@EIO = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [24 x i8] c"Checking for signal...\0A\00", align 1
@SAA7191_STATUS_HLCK = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [11 x i8] c"No signal\0A\00", align 1
@EBUSY = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [14 x i8] c"Signal found\0A\00", align 1
@SAA7191_STATUS_FIDT = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [6 x i8] c"NTSC\0A\00", align 1
@V4L2_STD_NTSC = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [5 x i8] c"PAL\0A\00", align 1
@V4L2_STD_PAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.v4l2_subdev*)* @saa7191_autodetect_norm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @saa7191_autodetect_norm(%struct.v4l2_subdev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.v4l2_subdev*, align 8
  %4 = alloca i32, align 4
  store %struct.v4l2_subdev* %0, %struct.v4l2_subdev** %3, align 8
  %5 = call i32 @dprintk(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  %6 = call i32 @dprintk(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0))
  %7 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %3, align 8
  %8 = call i64 @saa7191_read_status(%struct.v4l2_subdev* %7, i32* %4)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i32, i32* @EIO, align 4
  %12 = sub nsw i32 0, %11
  store i32 %12, i32* %2, align 4
  br label %39

13:                                               ; preds = %1
  %14 = call i32 @dprintk(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.2, i64 0, i64 0))
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* @SAA7191_STATUS_HLCK, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %13
  %20 = call i32 @dprintk(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i64 0, i64 0))
  %21 = load i32, i32* @EBUSY, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %2, align 4
  br label %39

23:                                               ; preds = %13
  %24 = call i32 @dprintk(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.4, i64 0, i64 0))
  %25 = load i32, i32* %4, align 4
  %26 = load i32, i32* @SAA7191_STATUS_FIDT, align 4
  %27 = and i32 %25, %26
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %34

29:                                               ; preds = %23
  %30 = call i32 @dprintk(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.5, i64 0, i64 0))
  %31 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %3, align 8
  %32 = load i32, i32* @V4L2_STD_NTSC, align 4
  %33 = call i32 @saa7191_s_std(%struct.v4l2_subdev* %31, i32 %32)
  store i32 %33, i32* %2, align 4
  br label %39

34:                                               ; preds = %23
  %35 = call i32 @dprintk(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.6, i64 0, i64 0))
  %36 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %3, align 8
  %37 = load i32, i32* @V4L2_STD_PAL, align 4
  %38 = call i32 @saa7191_s_std(%struct.v4l2_subdev* %36, i32 %37)
  store i32 %38, i32* %2, align 4
  br label %39

39:                                               ; preds = %34, %29, %19, %10
  %40 = load i32, i32* %2, align 4
  ret i32 %40
}

declare dso_local i32 @dprintk(i8*) #1

declare dso_local i64 @saa7191_read_status(%struct.v4l2_subdev*, i32*) #1

declare dso_local i32 @saa7191_s_std(%struct.v4l2_subdev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
